<resources>
    <string name="app_name" translatable="false">Arch Wiki</string>
    <string name="language_preference">language preference</string>
    <string name="chinese_simple">chinese simple</string>
    <string name="english_america">english america</string>
    <string name="setting">setting</string>
    <string name="keep_default">keep default</string>
    <string name="confirm">confirm</string>
    <string name="select_preference_language">select preference language</string>
    <string name="refresh">refresh</string>
    <string name="search">search</string>
    <string name="more_click_exit">more click to exit</string>
    <string name="cancel">cancel</string>
    <string name="retry">retry</string>
    <string name="page_load_error">page loading error</string>
    <string name="bookmark">bookmark</string>
    <string name="add_bookmark">add bookmark</string>
    <string name="there_is_nothing">there is nothing</string>
    <string name="already_exist_same_bookmark">already exist same bookmark</string>
    <string name="add_bookmark_success">add bookmark success</string>
    <string name="add_bookmark_failure">add bookmark failure</string>
    <string name="remove_bookmark_success">remove bookmark success</string>
    <string name="remove_bookmark_failure">remove bookmark failure</string>
    <string name="loading_bookmark">loading bookmark</string>
    <string name="switch_language">switch language</string>
    <string name="would_add_bookmark">would add bookmark</string>
    <string name="would_remove_bookmark">would remove bookmark</string>
    <string name="exit">exit</string>
    <string name="about">about</string>
</resources>
